fix: list items have some spacing to read easier

--- a/assets/sass/_style.scss
+++ b/assets/sass/_style.scss
@@ -124,6 +124,10 @@ blockquote {
 
 ul, ol {
     @extend %text-content-size;    
+
+    li {
+        @extend .pv1;
+    }
 }
 
 
